*** empty log message ***

--- a/doc/src/manual/ch-parallel-exec.tex
+++ b/doc/src/manual/ch-parallel-exec.tex
@@ -1,6 +1,9 @@
 \chapter{Parallel Distributed Simulation}
 \label{cha:parallel-execution}
 
+%FIXME TBD bibl.references
+%FIXME TBD figures
+
 \section{Introduction to Parallel Discrete Event Simulation}
 
 {\opp} supports parallel execution\index{parallel simulation} of large
