*** empty log message ***

--- a/doc/src/manual/ch-parallel-exec.tex
+++ b/doc/src/manual/ch-parallel-exec.tex
@@ -102,10 +102,10 @@ to display these values.
   \end{center}
 \end{figure}
 
-After having approximate values of $P$, $E$, $L$ and $\tau$,
+After having approximate values of $P$, $E$, $L$ and $ \tau$,
 calculate the $\lambda$ \textit{coupling factor} as the ratio of $LE$ and $\tau P$:
 
-$\lambda = \frac{LE}{\tau P}$
+$\lambda = (LE) / (\tau P)$
 
 Without going into the details: if the resulting $\lambda$ value is at
 minimum larger than one, but rather in the range 10..100, there is
