*** empty log message ***

--- a/doc/src/manual/ch-opp-design.tex
+++ b/doc/src/manual/ch-opp-design.tex
@@ -13,7 +13,7 @@ high-level architecture of {\opp} simulations:
   \end{center}
 \end{figure}
 
-The rectangles in the picture represent functional blocks:
+The rectangles in the picture represent components:
 
 \begin{itemize}
   \item{\textbf{Sim} is the simulation kernel and class
@@ -46,7 +46,7 @@ The rectangles in the picture represent functional blocks:
     are all instances of components in the model component library.}
 \end{itemize}
 
-The arrows in the figure show how functional blocks interact with
+The arrows in the figure show how components interact with
 each other:
 
 \begin{itemize}
