--- a/doc/src/manual/ch-parallel-exec.tex
+++ b/doc/src/manual/ch-parallel-exec.tex
@@ -83,8 +83,8 @@ above:
     $\tau$ is the latency of sending a message from one LP to another. $\tau$
     can be determined using simple benchmark programs. The authors' measurements
     on a Linux cluster interconnected via a 100Mb Ethernet switch using MPI
-    yielded $\tau$=22$\mu$s which rhymes with measurements reported in
-    \cite{ongfarrell2000}; specialized hardware such as
+    yielded $\tau$=22$\mu$s which rhymes with measurements reported
+    in \cite{ongfarrell2000}; specialized hardware such as
     Quadrics Interconnect \cite{quadrics} can provide $\tau$=5$\mu$s or better.}
 \end{itemize}
 
@@ -102,7 +102,7 @@ to display these values.
   \end{center}
 \end{figure}
 
-After having approximate values of $P$, $E$, $L$ and $ \tau$,
+After having approximate values of $P$, $E$, $L$ and $\tau$,
 calculate the $\lambda$ \textit{coupling factor} as the ratio of $LE$ and $\tau P$:
 
 $\lambda = (LE) / (\tau P)$
